--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,6 +24,10 @@ target 'rickandmorty' do
   use_flipper!()
 
   post_install do |installer|
-    react_native_post_install(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = "arm64"
+      end
+    end
   end
 end
